fix(horizontal form): horizontal form bug fix and wizard page inputs alignment

--- a/src/app/scss/_base.scss
+++ b/src/app/scss/_base.scss
@@ -995,6 +995,11 @@ $i: 1;
   }
 }
 
+.form-horizontal {
+  .form-group {
+    @include box-sizing(border-box);
+  }
+}
 
 .form-control{
   &.input-transparent{
